# ferryman

./: .gitignore  Cargo.toml  README.md
crates/ferryman-core/: Cargo.toml
crates/ferryman-core/src/: cli.rs  engine.rs  error.rs  lib.rs  partition.rs  progress.rs  registry.rs  schema.rs  traits.rs
crates/ferryman-core/src/formats/: arrow_ipc.rs  avro.rs  csv.rs  excel.rs  json.rs  mod.rs  orc.rs  parquet.rs
docs/: ARCHITECTURE.md
test_data/: README.md  generate.py  main.py  pyproject.toml
test_data/test_data/: data.arrow  data.avro  data.excel  data.json  data.jsonl  data.orc  data.parquet  data.xlsx
tests/: roundtrip_tests.rs
